--- a/public/frontend/assets/css/templatemo-art-factory.css
+++ b/public/frontend/assets/css/templatemo-art-factory.css
@@ -126,7 +126,8 @@ ul,
 li {
   padding: 0;
   margin: 0;
-  list-style: none;
+  /* list-style: none; */
+  /* list-style: circle; */
 }
 
 header,
